profiling-using-exp-runner/backup_FINAL_RESULTS/lemmatization_experiment/run_0_repetition_0/energibridge.log
sampling interval: 200, target function: lemmatization, input size: Running quickly, the children played happily in the sunny park, unaware of the approaching storm.
  File "<string>", line 1
    import sys; import os; import numpy as np; import spacy; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.lemmatization as module; nlp = spacy.load(en_core_web_sm); sentence = Running quickly, the children played happily in the sunny park, unaware of the approaching storm.; module.lemmatization(nlp, sentence)
                                                                             ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.60118392944336 for 0.22977157 sec of execution.
